# gr-ethernet

./: .gitignore  .modtool  CMakeLists.txt  README.md
apps/: ethernet_inspector_webserver.py
examples/: Demo 100BASE-TX.mkv  Demo_100BASE-TX.mkv  README.md
examples/100BASE-TX/: decode_100BASE-TX.grc  decode_100BASETX.py  oscillo.py
examples/10BASE-T/: decode_10BASE-T.grc  decode_10BASET.py
grc/: CMakeLists.txt  ethernet_ethernet_10baset_decoder.block.yml  ethernet_fastethernet_descrambler.block.yml  ethernet_fastethernet_frame_decoder.block.yml  ethernet_mlt3_to_scrambled.block.yml  ethernet_slicer3.block.yml
include/gnuradio/ethernet/: CMakeLists.txt  api.h  ethernet_10baset_decoder.h  fastethernet_descrambler.h  fastethernet_frame_decoder.h  mlt3_to_scrambled.h  slicer3.h
lib/: CMakeLists.txt  ethernet_10baset_decoder_impl.cc  ethernet_10baset_decoder_impl.h  fastethernet_descrambler_impl.cc  fastethernet_descrambler_impl.h  fastethernet_frame_decoder_impl.cc  fastethernet_frame_decoder_impl.h  mlt3_to_scrambled_impl.cc  mlt3_to_scrambled_impl.h  slicer3_impl.cc  slicer3_impl.h
python/ethernet/: CMakeLists.txt  __init__.py
python/ethernet/bindings/: CMakeLists.txt  ethernet_10baset_decoder_python.cc  fastethernet_descrambler_python.cc  fastethernet_frame_decoder_python.cc  mlt3_to_scrambled_python.cc  python_bindings.cc  slicer3_python.cc
python/ethernet/bindings/docstrings/: ethernet_10baset_decoder_pydoc_template.h  fastethernet_descrambler_pydoc_template.h  fastethernet_frame_decoder_pydoc_template.h  mlt3_to_scrambled_pydoc_template.h  pydoc_template.h
